<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ec.edu.uce.spok.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="86dp"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/login"
            android:text="Iniciar Sesión"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnRegistrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/registrarse"
            android:text="Registrase"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universidad"
        android:textSize="8sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estudiante1"
        android:textSize="8sp"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="21dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="9dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        android:layout_marginLeft="21dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estudiante2"
        android:textSize="8sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="1dp"
        app:layout_constraintRight_toRightOf="@+id/textView6"
        android:layout_marginBottom="7dp"
        android:layout_marginRight="1dp" />

</android.support.constraint.ConstraintLayout>
